--- a/app/views/folders/_form.html.erb
+++ b/app/views/folders/_form.html.erb
@@ -8,7 +8,7 @@
 		<%= f.text_area :about , :class =>"form-control" %>
 	</div>
 	<div class="form-group text-center">
-		<%= f.submit '傳送', :class =>"btn btn-default", data: {confirm: "確定創立?" } %>
-		<div class="btn btn-default" id="folder-cancelbtn">取消</div>
+		<%= f.submit '傳送', :class =>"tiny ui black basic button", data: {confirm: "確定創立?" } %>
+		<div class="tiny ui black basic button" id="folder-cancelbtn">取消</div>
 	</div>
 <% end %>
