--- a/app/views/users/signup.html.erb
+++ b/app/views/users/signup.html.erb
@@ -33,6 +33,6 @@
     <%= f.label :about, '個人簡介' %>
     <%= f.text_area :about, :class =>"form-control"  %><br>
   </div>
-  <%= f.submit '註冊', :class =>"btn btn-default" %>
+  <%= f.submit '註冊', :class =>"ui button" %>
   <% end %>
 </div>
