--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -20,7 +20,7 @@
 						<%= f.text_area :body , :class =>"form-control" %><br><br>
 					</div>
 					<div class="form-group">
-						<%= f.submit '傳送', :class =>"btn btn-default", data: {confirm: "確定送出?" } %>
+						<%= f.submit '傳送', :class =>"ui button", data: {confirm: "確定送出?" } %>
 					</div>
 				<% end %>
 			</div>
