--- a/app/views/users/crop.html.erb
+++ b/app/views/users/crop.html.erb
@@ -11,7 +11,8 @@
 					<% %w[x y w h].each do |attr| %>
 						<%= f.hidden_field "crop_#{attr}" %><br>
 					<% end %>
-					<%= f.submit '裁切' , :class => 'btn btn-default', :id =>'crop-btn' %>
+					<%= f.submit '裁切' , :class => 'ui black basic button', :id =>'crop-btn' %>
+					<%= link_to '取消', user_path(@user.id), :class => 'ui black basic button' %>
 				</div>
 			<% end %>
 		</div>
