--- a/app/views/relationships/unfollow_user.js.erb
+++ b/app/views/relationships/unfollow_user.js.erb
@@ -1,5 +1,5 @@
 $('#btnbar-<%= @user.id %> #unfollow-button').text('追蹤')
-                     .attr('class', 'ui black basic button')
+                     .attr('class', 'tiny ui black basic button')
                      .attr('href', "/<%= @user.id %>/follow_user")
                      .attr('id', 'follow-button');
 
