--- a/app/views/users/signup.html.erb
+++ b/app/views/users/signup.html.erb
@@ -23,16 +23,16 @@
   </div>
   <div class="form-group">
     <%= f.label :password, '密碼' %>
-    <%= f.password_field :password, :class =>"form-control"  %><br>
+    <%= f.password_field :password, :class =>"form-control" %><br>
   </div>
   <div class="form-group">
     <%= f.label :password_confirmation, '確認密碼' %>
-    <%= f.password_field :password_confirmation, :class =>"form-control"  %><br>
+    <%= f.password_field :password_confirmation, :class =>"form-control" %><br>
   </div>
   <div class="form-group">
     <%= f.label :about, '個人簡介' %>
     <%= f.text_area :about, :class =>"form-control"  %><br>
   </div>
-  <%= f.submit '註冊', :class =>"ui button" %>
+  <%= f.submit '註冊', :class =>"tiny ui black basic button" %>
   <% end %>
 </div>
