--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,16 +1,18 @@
-<h1 class="text-center h1">寄信</h1>
-<%= form_for @msg, :html => {:class => "form"} do |f| %>
-	<div class="form-group">
-		<%= f.label :title, '標題: ' %><br><br>
-		<%= f.text_field :title , :class =>"form-control" %>
-	</div>
-	<input type='hidden' value='<%= params[:receiver_id] %>' name='receiver_id' />
-	<div class="form-group">
-		<%= f.label :body, '內文: ' %><br><br>
-		<%= f.text_area :body , :class =>"form-control" %><br><br>
-	</div>
-	<div class="form-group">
-		<%= f.submit ' 傳送', :class =>"btn btn-default" %>
-		<%= link_to '返回', :back , :class =>"btn btn-default" %>
-	</div>
-<% end %>
+<div class="col-md-8 col-md-offset-2">
+	<h1 class="text-center h1">回信</h1>
+	<%= form_for @msg, :html => {:class => "form"} do |f| %>
+		<div class="form-group">
+			<%= f.label :title, '標題: ' %><br><br>
+			<%= f.text_field :title , :class =>"form-control" %>
+		</div>
+		<input type='hidden' value='<%= params[:r] %>' name='message[receiver_id]' />
+		<div class="form-group">
+			<%= f.label :body, '內文: ' %><br><br>
+			<%= f.text_area :body , :class =>"form-control" %><br><br>
+		</div>
+		<div class="form-group">
+			<%= f.submit ' 傳送', :class =>"tiny ui basic black button" %>
+			<%= link_to '返回', :back , :class =>"tiny ui basic black button" %>
+		</div>
+	<% end %>
+</div>
