--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -5,7 +5,7 @@
 			<%= text_field_tag :email ,params[:email], :class =>"form-control"  %><br>
 		  <%= label_tag "密碼" %>
 			<%= password_field_tag :password, params[:password], :class =>"form-control"  %><br>
-			<%= submit_tag "登入", :class =>"ui button"  %>
+			<%= submit_tag "登入", :class =>"tiny ui black basic button"  %>
 		<% end %>
 	</div>
 <div class="block"></div>
