--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -9,6 +9,6 @@
     </div>
   </div>
   <div class="btn-group" role="group">
-    <%= link_to '返回', messages_path ,:class => "btn btn-default" %>
+    <%= link_to '返回', messages_path ,:class => "tiny ui black basic button" %>
   </div>
 </div>
