--- a/app/views/folders/myfolder.html.erb
+++ b/app/views/folders/myfolder.html.erb
@@ -13,7 +13,7 @@
     </div>
   </div>
 <% end %>
-<% if current_user && (current_user.id == @folderownerid ) %>
+<% if current_user && (current_user.id == @folderownerid )  && (current_user.id > 0) %>
   <div class="col-md-3 col-sm-3" style="margin-top:25px;">
     <div class="folder">
       <%= render 'form' %>
