--- a/app/views/layouts/_topmenu.html.erb
+++ b/app/views/layouts/_topmenu.html.erb
@@ -14,7 +14,7 @@
           <div id="notificationsBody">
             <% mynotice.each do |n|  %>
               <% if n.types == 1 || n.types == 3 %>
-                <%= link_to n.body , post_path(n.sender_id) ,:class => 'notifications'%>
+                <div class ='notifications notifypost-show' data-id="<%= n.sender_id %>"><%=  n.body %></div>
               <% else %>
                 <%= link_to n.body , user_path(n.sender_id),:class => 'notifications' %>
               <% end %>
@@ -27,6 +27,14 @@
     <li><%= link_to image_tag('menu/login.png'),login_path %></li>
   <% end %>
 </div>
+
+<div class="modal fade" id="notifypostmodal" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+    </div>
+  </div>
+</div>
+
 <script>
   $('#mailboxicon')
   .mouseover(function(){
@@ -48,6 +56,21 @@
       else{
         $("#notificationContainer").fadeOut();
       }
+    });
+    /* ajax show */
+    $('.notifypost-show').on('click',function(){
+      var ajaxurl = '/posts/' + this.getAttribute("data-id");
+      $.ajax({
+        url:ajaxurl,
+        type: 'GET',
+        success: function(response) {
+          $('#notifypostmodal .modal-content').prepend(response);
+          $('#notifypostmodal').data('bs.modal').handleUpdate();
+        }
+      });
+    });
+    $('#notifypostmodal').on('hidden.bs.modal', function () {
+      $('#notifypostmodal .modal-content').empty();
     });
   });
 </script>
