--- a/app/views/users/_followbtn.html.erb
+++ b/app/views/users/_followbtn.html.erb
@@ -5,10 +5,10 @@
       <%= link_to '刪除帳號' , user_path(user) , :class => 'tiny ui red basic button',id: 'del-button', method: :delete, data: { confirm: "確定刪除嗎?" } %>
     <% else %>
       <% if current_user_is_following(current_user.id, user.id) %>
-        <% if current_user.role > 0 %>
+        <%# if current_user.role > 0 %>
           <div class="tiny ui black basic button" id="send-button" data-toggle="modal" data-target="#message-<%= user.id %>">傳送訊息</div>
           <%= render'./messages/form', receiver: user %>
-        <% end %>
+        <%# end %>
         <%= link_to '追蹤中', unfollow_user_path(user),
                           remote: true,
                           class: 'tiny ui red basic button',
