--- a/app/views/layouts/_topmenu.html.erb
+++ b/app/views/layouts/_topmenu.html.erb
@@ -14,7 +14,7 @@
           <div id="notificationsBody">
             <% mynotice.each do |n|  %>
               <% if n.types == 1 || n.types == 3 %>
-                <div class ='notifications notifypost-show' data-id="<%= n.sender_id %>"><%=  n.body %></div>
+                <div class ='notifications notifypost-show' data-toggle="modal" data-target="#notifypostmodal" data-id="<%= n.sender_id %>"><%=  n.body %></div>
               <% else %>
                 <%= link_to n.body , user_path(n.sender_id),:class => 'notifications' %>
               <% end %>
