--- a/app/views/users/adminpost.html.erb
+++ b/app/views/users/adminpost.html.erb
@@ -23,7 +23,7 @@
 </div>
 
 <div class="modal fade" id="postmodal" tabindex="-1" role="dialog" aria-hidden="true">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
     </div>
   </div>
