--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -72,9 +72,8 @@ a,a:hover{
   color:black;
   text-decoration:none;
 }
-
 html *{
-  font-family:"Helvetica Neue","Arial", "Segoe UI","STHeiti", "Microsoft JhengHei";
+  font-family: Arial , "儷黑 Pro", "LiHei Pro", "微軟正黑體", "Microsoft JhengHei", "標楷體","Helvetica Neue","Arial";
 }
 /* Reset end */
 
@@ -91,7 +90,7 @@ html *{
 .topmenu{
   width:100%;
   margin-top:10px;
-  margin-bottom:100px;
+  margin-bottom:50px;
 }
 
 .topmenu li{
@@ -111,7 +110,8 @@ html *{
 
 /* Side */
 #logo{
-  width:100%;
+  margin:20px auto;
+  width:70%;
 }
 
 .sidemenu{
