--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -29,11 +29,12 @@
   border:1px solid gray;
   padding:15px;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 12px 20px 0 rgba(0, 0, 0, 0.19);
+  min-height:350px;
 }
 
 .following-avatar{
   display:block;
-  width:80%;
+  width:30%;
   margin:10px auto;
   border-radius:50%;
 }
@@ -55,8 +56,8 @@
 
 .following-userabout{
   line-height:20px;
-  width:80%;
-  margin:0 auto;
+  width:90%;
+  margin:10px auto 0 auto;
 }
 
 /* 裁圖 */
