--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,7 +2,13 @@
   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button>
-  <h4 class="modal-title"><%= @post.title %></h4>
+  <div class="modal-title">
+    <div class="right floated meta">
+      <%= image_tag @post.user.avatar.url(:avatar),:class => 'ui avatar image'%>
+      <%= @post.title %> by <%=link_to @post.user.name,@post.user %>
+      <%= @post.created_at.strftime("%Y/%m/%d") %>
+    </div>
+  </div>
 </div>
 <div class="modal-body">
   <div id="post-<%= @post.id %>">
