--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,8 +10,10 @@
           <% end %>
         </div>
         <%= link_to image_tag(user.avatar.url(:avatar) , :class => 'following-avatar'),user %>
-        <br><p class="text-center"><%= link_to user.name , user %></p>
-        <br><p class="text-center following-userabout"><%= user.about %></p><br>
+        <div class="text-center following-userabout">
+          <p style="font-weight:bold;"><%= link_to user.name,user %></p><br>
+          <p class="text-left"><%= user.about %></p>
+        </div>
         <%= render'followbtn', user: user %>
       </div>
     </div>
