--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,12 +1,15 @@
 <div class="modal-header">
-  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-    <span aria-hidden="true">&times;</span>
-  </button>
   <div class="modal-title">
     <div class="right floated meta">
       <%= image_tag @post.user.avatar.url(:avatar),:class => 'ui avatar image'%>
-      <%= @post.title %> by <%=link_to @post.user.name,@post.user %>
-      <%= @post.created_at.strftime("%Y/%m/%d") %>
+      <%= @post.title %>
+      <span style ="color:rgb(152,155,170);">
+        by <%=link_to @post.user.name,@post.user ,:style =>"color:rgb(62,146,198);" %>
+        on <%= @post.created_at.strftime("%Y/%m/%d") %>
+      </span>
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
     </div>
   </div>
 </div>
