--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
     <%= @user.name %><br>
     <%= @user.about %>
   </p>
-  <%= render'followbtn', user: @user %>
+  <%= render'userbtn', user: @user %>
 </div>
 <div class="grid">
   <div class="grid-sizer"></div>
