--- a/app/views/users/adminuser.html.erb
+++ b/app/views/users/adminuser.html.erb
@@ -1,8 +1,8 @@
 <% @user.each_slice(3) do |users| %>
   <% users.each do |user| %>
     <div class="col-md-4 col-sm-4" id="user-<%= user.id  %>" style="margin-top:25px;">
-      <div class="following">
-        <%= link_to image_tag(user.avatar.url(:avatar) , :class => 'following-avatar'),user %><br>
+      <div class="usercard">
+        <%= link_to image_tag(user.avatar.url(:avatar) , :class => 'usercard-avatar'),user %><br>
         <p class="text-center"><%= user.name %></p><br>
         <p class="text-center"><%= user.about %></p><br>
         <p class="text-center"><%= user.email %></p><br>
