--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -11,8 +11,8 @@
   height:auto;
 }
 
-.authorname{
-  font-size:16px;
+.authorname a,.authorname a:hover{
+  color:white;
   font-weight: bold;
 }
 
