--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,21 +2,21 @@
   <div class="grid-sizer"></div>
   <% @post.each_slice(4) do |posts| %>
       <% posts.each do |post| %>
-        <div class="col-lg-3 col-md-3 col-sm-3 grid-item" id="post-<%= post.id %>">
-          <div class="ui card">
-            <div class="content" style="padding:8px;">
-              <span class="authorname"><%=link_to post.user.name , post.user %></span>
-              <div class="right floated meta" style="font-size:10px;">
-                <i class="calendar icon"></i> <%= post.created_at.strftime("%Y/%m/%d") %>
+        <div class="col-lg-3 col-md-3 col-sm-3 grid-item ui special cards" id="post-<%= post.id %>" data-id="<%= post.id %>">
+          <div class="card">
+            <div class="blurring dimmable image">
+              <div class="ui dimmer post-show" data-toggle="modal" data-target="#postmodal" data-id="<%= post.id %>">
+                <div class="content" style="font-size:10px;">
+                  <div class="center">
+                    <span class="authorname"><%=link_to post.user.name , post.user %></span><br><br>
+                    <i class="calendar icon"></i> <%= post.created_at.strftime("%Y/%m/%d") %><br><br>
+                    <i class="heart red icon"></i><%= post.likes.count %>&nbsp;&nbsp;&nbsp;
+                    <i class="unhide icon"></i><%= post.view %>&nbsp;&nbsp;&nbsp;
+                    <i class="comment icon"></i><%= post.comments.count %>
+                  </div>
+                </div>
               </div>
-            </div>
-            <div class="image post-show" data-toggle="modal" data-target="#postmodal" data-id="<%= post.id %>">
-              <%=  image_tag post.image.url , :class =>'postimg' %>
-            </div>
-            <div class="content" style="padding:8px;font-size:10px;">
-                <i class="heart red icon"></i><%= post.likes.count %> Likes
-                &nbsp;&nbsp;<i class="unhide icon"></i><%= post.view %>
-                &nbsp;&nbsp;<i class="comment icon"></i><%= post.comments.count %> Comments
+              <%= image_tag post.image.url , :class =>'postimg' %>
             </div>
           </div>
         </div>
@@ -56,5 +56,10 @@
       console.log('hide');
       $('#postmodal .modal-content').empty();
     });
+
+    $('.special.cards .image').dimmer({
+      on: 'hover'
+    });
+
   });
 </script>
