--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,15 +10,21 @@
   <div class="grid-sizer"></div>
   <% @user.mypost.each_slice(4) do |posts| %>
     <% posts.each do |post| %>
-      <div class="col-lg-3 col-md-3 col-sm-3 grid-item" id="post-<%= post.id %>">
-        <div class="ui card">
-          <div class="image post-show" data-toggle="modal" data-target="#postmodal" data-id="<%= post.id %>">
-            <%=  image_tag post.image.url , :class =>'postimg' %>
-          </div>
-          <div class="content" style="padding:8px;font-size:10px;">
-              <i class="heart red icon"></i><%= post.likes.count %> Likes
-              &nbsp;<i class="unhide icon"></i><%= post.view %>
-              &nbsp;<i class="comment icon"></i><%= post.comments.count %> Comments
+      <div class="col-lg-3 col-md-3 col-sm-3 grid-item ui special cards" id="post-<%= post.id %>" data-id="<%= post.id %>">
+        <div class="card">
+          <div class="blurring dimmable image">
+            <div class="ui dimmer post-show" data-toggle="modal" data-target="#postmodal" data-id="<%= post.id %>">
+              <div class="content" style="font-size:10px;">
+                <div class="center">
+                  <span class="authorname"><%=link_to post.user.name , post.user %></span><br><br>
+                  <i class="calendar icon"></i> <%= post.created_at.strftime("%Y/%m/%d") %><br><br>
+                  <i class="heart red icon"></i><%= post.likes.count %>&nbsp;&nbsp;&nbsp;
+                  <i class="unhide icon"></i><%= post.view %>&nbsp;&nbsp;&nbsp;
+                  <i class="comment icon"></i><%= post.comments.count %>
+                </div>
+              </div>
+            </div>
+            <%= image_tag post.image.url , :class =>'postimg' %>
           </div>
         </div>
       </div>
@@ -38,8 +44,8 @@
     grid.masonry({itemSelector: '.grid-item', columnWidth: '.grid-sizer', percentPosition: true});
   });
 
-  /* ajax show */
   $(document).ready(function(){
+    /* ajax show */
     $('.post-show').on('click',function(){
       var ajaxurl = '/posts/' + this.getAttribute("data-id");
       $.ajax({
@@ -50,8 +56,13 @@
         }
       });
     });
+
     $('#postmodal').on('hidden.bs.modal', function () {
       $('#postmodal .modal-content').empty();
+    });
+
+    $('.special.cards .image').dimmer({
+      on: 'hover'
     });
   });
 </script>
