--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -20,12 +20,7 @@
   width:25%;
 }
 
-.ui.cards ~ .ui.cards,.ui.cards>.card,.ui.cards{
-  margin:0px;
-  margin-top:0px;
-}
-
-.col-md-3.grid-item{
+#post-card{
   padding-left:10px;
   padding-right:10px;
   margin-top:20px;
