--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -20,10 +20,9 @@
   width:25%;
 }
 
-#post-card{
-  padding-left:10px;
-  padding-right:10px;
-  margin-top:20px;
+.col-sm-3.grid-item, .col-md-3.grid-item, .col-lg-3.grid-item{
+  padding-left:0px;
+  padding-right:0px;
 }
 
 /* single post */
