--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,8 +10,8 @@
   <div class="grid-sizer"></div>
   <% @user.mypost.each_slice(4) do |posts| %>
     <% posts.each do |post| %>
-      <div class="col-lg-3 col-md-3 col-sm-3 grid-item ui special cards" id="post-<%= post.id %> post-card" data-id="<%= post.id %>">
-        <div class="card" style="margin:0px;">
+      <div class="col-lg-3 col-md-3 col-sm-3 grid-item ui special cards" id="post-<%= post.id %>" data-id="<%= post.id %>">
+        <div class="card" style="margin:10px 12px;">
           <div class="blurring dimmable image">
             <div class="ui dimmer post-show" data-toggle="modal" data-target="#postmodal" data-id="<%= post.id %>">
               <div class="content" style="font-size:10px;">
